<resources>
    <string name="title_camera_fragment">Camera</string>
    <string name="return_btn">return</string>
    <string name="click_to_add_camera">Click to Add Camera</string>
    <string name="device_setting">Device Setting</string>
    <string name="name">Name:</string>
    <string name="user_name">UseName:</string>
    <string name="camera">Camera</string>
    <string name="admin">admin</string>
    <string name="uid">UID:</string>
    <string name="psw">Password</string>
    <string name="search_in_lan">LAN search UID</string>
    <string name="one_key_setting">One Key Set WIFI</string>
    <string name="add_camera">Add Camera</string>
    <string name="finish">finish</string>
    <string name="text_scan">put the QR Code into the box</string>
    <string name="search_camera_result">Search results</string>
    <string name="refresh">refresh</string>
    <string name="sure">Sure</string>
    <string name="tips_loading">Loading</string>
    <string name="list_txt_uid">UID: </string>
    <string name="tips_null_nike">[Camera name] must be entered.</string>
    <string name="tips_null_uid">[UID] is not entered.</string>
    <string name="tips_null_username">[User Name] is not entered.</string>
    <string name="tips_add_camera_exists">This camera already exists, please enter another one.</string>
    <string name="tips_title_info">Information</string>
    <string name="btn_ok">OK</string>
    <string name="setting">Setting</string>
    <string name="ssid">SSID</string>
    <string name="one_key_setting_wifi">One Key Setting Wifi</string>
    <string name="connect_to_WIFI_first">please connect to WIFI first</string>
    <string name="radio_quality_sd">SD</string>
    <string name="radio_quality_hd">HD</string>
    <string name="txt_recording">REC...</string>
    <string name="tips_snapshot_success">Snapshot successfully.</string>
    <string name="tips_snapshot_failed">Snapshot was failed.</string>
    <string name="tips_no_sdcard">No SDCard found in your device.</string>
    <string name="resolution_ratio">resolution ratio</string>
    <string name="high_definition">Max</string>
    <string name="fluent">Low</string>
    <string name="btn_ptz_zoomin">Zoom in</string>
    <string name="btn_ptz_zoomout">Zoom out</string>
    <string name="btn_ptz_focusout">Focus out</string>
    <string name="btn_ptz_focusin">Focus in</string>
    <string name="btn_preset_call">Call</string>
    <string name="btn_preset_set">Set</string>
    <string name="tips_preset_set_btn">Default setting success</string>
    <string name="btn_preset_1">1</string>
    <string name="btn_preset_2">2</string>
    <string name="btn_preset_3">3</string>
    <string name="btn_preset_4">4</string>
    <string name="btn_preset_5">5</string>
    <string name="btn_preset_6">6</string>
    <string name="btn_preset_7">7</string>
    <string name="btn_preset_8">8</string>
    <string name="txt_live_flip">Flip</string>
    <string name="txt_live_mirror">Mirror</string>
    <string name="modify_password">Edit Password</string>
    <string name="alarm_motion_detection">Alarm Setting</string>
    <string name="action_with_alarm">Alarm Linkage Setting</string>
    <string name="timing_video">Timer Recoding</string>
    <string name="title_audio_setup">Audio Setting</string>
    <string name="title_video_settings">Video Setting</string>
    <string name="wifi_settings">WIFI Setting</string>
    <string name="sd_card_set">SD Card Setting</string>
    <string name="equipment_time_setting">Device Time Setting</string>
    <string name="title_mailbox_settings">Email Setting</string>
    <string name="title_ftp_settings">FTP Settings</string>
    <string name="title_system_settings">System Settings</string>
    <string name="title_equipment_information">Device Information</string>
    <string name="camera_setup">Camera setup</string>
    <string name="old_psw">Old:</string>
    <string name="new_psw">New:</string>
    <string name="sure_new_psw">Confirm:</string>
    <string name="title_password">Setting Password</string>
    <string name="tips_password_wrong_contains">password can not contains ~ $ \ \\ = + or space</string>
    <string name="tips_old_password_is_wrong">The Current password is wrong.</string>
    <string name="tips_new_passwords_do_not_match">New passwords do not match.</string>
    <string name="use_setting_show_psw">Show password</string>
    <string name="tips_modify_security_code_ok">Successfully modify the password, the camera will be re connected later</string>
    <string name="open_motion_detection">Open motion detection</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="alarm_activity_title">Alarm motion detection</string>
    <string name="application">Application</string>
    <string name="alarm_push">Alarm push</string>
    <string name="alarm_sd_card_video">Alarm SD card video</string>
    <string name="email_alarm_and_send_pictures">Email alarm and send pictures</string>
    <string name="save_pictures_to_ftp_server">Save pictures to FTP server</string>
    <string name="save_videos_to_ftp_server">Save videos to FTP server</string>
    <string name="take_picture_counts">Picture num</string>
    <string name="video_file_times">Video file times</string>
    <string name="tips_recording_time_range">The time range of 15&#8211;%d seconds</string>
    <string name="turn_on_video">Open the video</string>
    <string name="video_time">Video time</string>
    <string name="sends">seconds</string>
    <string name="input_style">Input style</string>
    <string name="input_volume">Input volume</string>
    <string name="output_volume">Output volume</string>
    <string name="video_setting_first_stream">First stream</string>
    <string name="video_setting_second_stream">Second stream</string>
    <string name="video_setting_code_rate">Code rate</string>
    <string name="video_setting_frame_rate">Frame rate</string>
    <string name="video_setting_video_level">Video level</string>
    <string name="video_setting_btm_tips">The smaller the value, the better the image level, the greater the number of stream control</string>
    <string name="video_setting_video_format">Video format</string>
    <string name="wifi_setting_loading">Loading</string>
    <string name="wifi_setting_safety">Safety:</string>
    <string name="wifi_setting_manager_btn">Wifi network management</string>
    <string name="title_sdcard_setting">SD Card info</string>
    <string name="sd_card_setting_storage_size">Total size</string>
    <string name="sd_card_setting_available_size">Free size</string>
    <string name="sd_card_setting_format_sd_card">Format SD card</string>
    <string name="sd_card_setting_btm_tips">Formatting instructions will clear all data in SDCard</string>
    <string name="title_equipment_setting">Time Setting</string>
    <string name="equipment_setting_setting_time">Equipment time setting</string>
    <string name="equipment_setting_synchronization_time">Synchronization time</string>
    <string name="equipment_setting_equipment_setting_timezone">Device time zone settings</string>
    <string name="equipment_setting_equipment_timezone">Device time zone</string>
    <string name="equipment_setting_phone_timezone">Mobile time zone</string>
    <string name="equipment_setting_setting_timezone">Setting timezone</string>
    <string name="mailbox_setting_smtp_server">SMTP Server</string>
    <string name="mailbox_setting_port">Port</string>
    <string name="mailbox_setting_safety_connection">Safe link</string>
    <string name="mailbox_setting_verification">Verification</string>
    <string name="mailbox_setting_username">Username</string>
    <string name="mailbox_setting_password">Password</string>
    <string name="mailbox_setting_receive_address">Send to</string>
    <string name="mailbox_setting_sending_address">Sender</string>
    <string name="mailbox_setting_theme">Theme</string>
    <string name="mailbox_setting_message">Message</string>
    <string name="mailbox_setting_test_email">Test Email Setting</string>
    <string name="mailbox_setting_test">Test</string>
    <string name="ftp_setting_server">server</string>
    <string name="ftp_setting_port">port</string>
    <string name="ftp_setting_username">username</string>
    <string name="ftp_setting_password">password</string>
    <string name="ftp_setting_passive_mode">Passive mode</string>
    <string name="ftp_setting_path">path</string>
    <string name="ftp_setting_test_ftp">Test FTP settings</string>
    <string name="system_setting_restart_camera">Restart camera</string>
    <string name="system_setting_restore_factory_settings">Restore factory settings</string>
    <string name="system_setting_upgrade_online_settings">Upgrade Online</string>
    <string name="device_info_device_name">Device name</string>
    <string name="device_info_network_state">Network state</string>
    <string name="device_info_user_connections">user connections Num</string>
    <string name="device_info_software_version">Software version</string>
    <string name="device_info_ip_address">IP address</string>
    <string name="device_info_subnet_mask">Subnet mask</string>
    <string name="device_info_gateway">Gateway</string>
    <string name="device_info_dns">DNS</string>
    <string name="tips_format_sd_card">Are you sure you want to delete all video files?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="tips_reboot_camera">Are you sure you want to reboot Camera?</string>
    <string name="tips_restore_factory_settings">Are you sure you want to restore factory settings?</string>
    <string name="tips_frame_rate_range">Maximum frame rate range is 1&#8211;%d</string>
    <string name="first_tips_code_rate_range">Maximum rate range is 32&#8211;6144</string>
    <string name="second_tips_code_rate_range">Maximum rate range is 32&#8211;2048</string>
    <string name="tips_video_level_range">video coding level range is 1&#8211;6</string>
    <string name="title_wifi_setting">WIFI Setting</string>
    <string name="wifi_setting_signal_intensity">Signal intensity:</string>
    <string name="wifi_setting_connect">Connect</string>
    <string name="wifi_setting_not_connect">NO Connect</string>
    <string name="wifi_setting_connected">Connected</string>
    <string name="mailbox_setting_save_success">Mailbox settings saved successfully</string>
    <string name="mailbox_setting_save_failed">Mailbox settings saved failed</string>
    <string name="ftp_setting_save_success">FTP settings saved successfully</string>
    <string name="ftp_setting_save_failed">FTP settings saved failed</string>
    <string name="alarm_action_save_failed">Alarm settings saved failed</string>
    <string name="alarm_action_save_success">Alarm settings saved successfully</string>
    <string name="mailbox_setting_check_success">Test Success</string>
    <string name="mailbox_setting_check_failed">Test Failed</string>
    <string name="title_scan_qr_code">Scan QR Code</string>
    <string name="about_fragment_SDK_version">SDK_version:1.5.2</string>
    <string name="about_fragment_copyright">CopyRight</string>
    <string name="title_about_fragment">About</string>
    <string name="title_picture_fragment">Picture</string>
    <string name="title_local_picture">Local Picture</string>
    <string name="tips_msg_delete_snapshot">Do you want to delete this photo?</string>
    <string name="delete">Delete</string>
    <string name="btn_play_video_local">Play</string>
    <string name="btn_delete_video_local">Delete</string>
    <string name="btn_play_video_online">Play</string>
    <string name="btn_downlinad_video_online">Downloaded to phone</string>
    <string name="tips_delete_video_local">Are you sure you want to delete this video Recording?</string>
    <string name="tips_msg_delete_video_recording">Are you sure you want to delete all video recordings?</string>
    <string name="scan">扫描二维码下载物联云：</string>
</resources>