<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/resolution_ratio"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ratio_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_btn_bg"
        android:gravity="center"
        android:focusable="true"
        android:padding="15dip"
        android:layout_marginTop="3dip"
        android:text="@string/high_definition"
        android:textSize="16sp" />

    <Button
        android:id="@+id/ratio_fluent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dip"
        android:padding="15dip"
        android:background="@drawable/radio_btn_bg"
        android:gravity="center"
        android:text="@string/fluent"
        android:textSize="16sp" />

</LinearLayout>