<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.thecamhi.base.TitleView
        android:id="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_15"
        android:text="@string/device_setting"
        android:textColor="@android:color/black"
        android:textSize="18sp" 
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_10"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/add_camera_name_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/tips_null_nike" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_10"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/add_camera_username_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/admin"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_10"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uid" />

        <EditText
            android:id="@+id/add_camera_uid_edt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/tips_null_uid" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_10"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/psw" />

        <EditText
            android:id="@+id/add_camera_psw_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="场景选择："
            android:textColor="@color/black"
            android:textSize="18dip" />

        <LinearLayout
            android:id="@+id/ll_ivqucj"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/tv_qucj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="区域场景"
                android:textSize="18dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/jiantou" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#eee" />

    <LinearLayout
        android:id="@+id/scanner_QRcode_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px_5"
        android:layout_marginLeft="@dimen/px_5"
        android:layout_marginRight="@dimen/px_5"
        android:layout_marginTop="@dimen/px_20"
        android:background="@drawable/add_camera_round_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:src="@drawable/add_twobar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_in_lan_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_5"
        android:background="@drawable/add_camera_round_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:src="@drawable/addsearch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_in_lan"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_key_setting_wifi_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px_5"
        android:background="@drawable/add_camera_round_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:src="@drawable/smart_wifi_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_key_setting"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

</LinearLayout>